# YoloV8-ONNX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  conanfile_with_opencv.txt
models/: requirements.txt  yolo_create.py  yolo_infer.py
src/: load_image.hpp  main.cpp  post_processing.hpp  pre_processing.hpp
